prod_snapshot_2015-09-24_1030/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Deal Chicken</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Contacted - In Dialogue</fullName>
        </values>
        <values>
            <fullName>Contacted - Not Interested</fullName>
        </values>
        <values>
            <fullName>DNC%2FRemove From List</fullName>
        </values>
        <values>
            <fullName>Disconnected%23%2FBad Info</fullName>
        </values>
        <values>
            <fullName>Duplicate</fullName>
        </values>
        <values>
            <fullName>Franchise</fullName>
        </values>
        <values>
            <fullName>Ineligible%2FUnqualified lead</fullName>
        </values>
        <values>
            <fullName>Lead Gen Qualified</fullName>
        </values>
        <values>
            <fullName>Out of Business</fullName>
        </values>
        <values>
            <fullName>Pursuing DM%2FVM%2FSeveral Attempts</fullName>
        </values>
        <values>
            <fullName>Uncontacted - New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Market Login</fullName>
        <description>For Sales Reps In Other Markets To Enter Orders</description>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting Assignment</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Awaiting Audit Call</fullName>
        </values>
        <values>
            <fullName>Awaiting Close</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Out of Business</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>SML Lead Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Disqualified</fullName>
        </values>
        <values>
            <fullName>Inquiry</fullName>
        </values>
        <values>
            <fullName>Marketing Qualified %28MQL%29</fullName>
        </values>
        <values>
            <fullName>New Suspect Validation</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Sales Accepted %28SAL%29</fullName>
        </values>
        <values>
            <fullName>Sales Qualified %28SQL%29</fullName>
        </values>
        <values>
            <fullName>Send Back to Marketing</fullName>
        </values>
        <values>
            <fullName>Sourced Leads</fullName>
        </values>
        <values>
            <fullName>Teleprospecting Accepted %28TAL%29</fullName>
        </values>
        <values>
            <fullName>Teleprospecting Qualified Lead %28TQL%29</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Actual_Credit_Score__c</fullName>
        <label>Actual Credit Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Year_Started__c</fullName>
        <label>Actual Year Started</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ad_Size_Code__c</fullName>
        <label>Ad Size Code</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ad_Size__c</fullName>
        <label>Ad Size</label>
        <picklist>
            <picklistValues>
                <fullName>REGULAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN-COLUMN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DISPLAY AD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ad_Spend_Code__c</fullName>
        <label>Ad Spend Code</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ad_Spend_Range__c</fullName>
        <label>Ad Spend Range</label>
        <picklist>
            <picklistValues>
                <fullName>LESS THAN $5,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$5,000 TO $10,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$10,000 TO $20,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$20,000 TO $50,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$50,000 TO $100,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$100,000 TO $250,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OVER $250,000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Affiliated_Sales_Rep__c</fullName>
        <label>Sales Rep Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affl_Sales_Rep_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Affl Sales Rep 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads (Affl Sales Rep 2)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Age_Range__c</fullName>
        <label>Age Range</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18 - 24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25 - 34</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35 - 44</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45 - 54</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>55 - 64</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>65+</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>TODAY() -  DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alt_Direct_Phone__c</fullName>
        <label>Alt/Direct Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Alternate_Email__c</fullName>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Appointment_Time_1__c</fullName>
        <label>Appointment Time 1</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Appointment_Time_2__c</fullName>
        <label>Appointment Time 2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Arbitrary__c</fullName>
        <label>Arbitrary</label>
        <picklist>
            <picklistValues>
                <fullName>NotInterested_Oct/Nov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Old Reps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remove from list 3/8/10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jbrand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kedz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REPUBLIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Spend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID_August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RL_March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NI_August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NI_Sept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID_Sept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Throwbacks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TStarr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deal Chicken</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID_020711</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Average_Talk_Time__c</fullName>
        <formula>IF( Connected_Count__c &gt;0,Total_Talk_Time__c /  Connected_Count__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Talk Time/Connected Count</inlineHelpText>
        <label>Average Talk Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Transaction_Value__c</fullName>
        <label>Average Transaction Value</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50 - 100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100 - 500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Avg_Cust_Val__c</fullName>
        <label>Avg Cust Val</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <label>Balance</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Behavioral_Score__c</fullName>
        <label>Behavioral Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BestWhy__c</fullName>
        <label>BestWhy</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Best_Time_To_Call__c</fullName>
        <label>Best Time To Call</label>
        <picklist>
            <picklistValues>
                <fullName>Early Morning 6am - 9am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Morning 9am - 12pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Afternoon 12pm - 2pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid Afternoon 2pm - 4pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afternoon 4pm - 6pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evening 6pm - 8pm</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Budget_Range__c</fullName>
        <label>Budget Range</label>
        <picklist>
            <picklistValues>
                <fullName>$500-$1,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$1,000-$1,500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$1,500$-2,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$2,000-$2,500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$2,500-$3,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$3,000-$3,500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$3,500-$4,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$4,000-$4,500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$4,500-$5,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$5,000-$7,500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$7,500 - $15,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$15,000+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Credit_Score__c</fullName>
        <label>Business Credit Score</label>
        <picklist>
            <picklistValues>
                <fullName>95 to 100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90 to 94</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>85 to 89</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80 to 84</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75 to 79</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70 to 74</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less than 70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PROFESSIONAL INDIVIDUAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INSTITUTION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UNKNOWN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CR_Addl_Info__c</fullName>
        <label>CR Addl Info</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CR_Call_Date__c</fullName>
        <label>CR Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CR_Call_Direction__c</fullName>
        <label>CR Call Direction</label>
        <picklist>
            <picklistValues>
                <fullName>GL Running The Entire Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL In Background Providing Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL On Call As Product Specialist</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CR_Call_Format__c</fullName>
        <label>CR Call Format</label>
        <picklist>
            <picklistValues>
                <fullName>Conf Call Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call &amp; Webinar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CR_Call_Outcome__c</fullName>
        <label>CR Call Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>Close The Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schedule Next Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deliver Final Proposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soft Close On Sale</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CR_Call_Time__c</fullName>
        <label>CR Call Time</label>
        <picklist>
            <picklistValues>
                <fullName>08:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:15 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:45 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:15 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:45 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:15 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:45 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:15 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CR_Call_Zone__c</fullName>
        <label>CR Call Zone</label>
        <picklist>
            <picklistValues>
                <fullName>ET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CR_Client_Dig_Spend__c</fullName>
        <label>CR Client Dig Spend</label>
        <picklist>
            <picklistValues>
                <fullName>Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previous</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CR_Client_Emphasis_Points__c</fullName>
        <label>CR Client Emphasis Points</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CR_Client_Knowledge__c</fullName>
        <label>CR Client Knowledge</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CR_Client_Products__c</fullName>
        <label>CR Client Products</label>
        <picklist>
            <picklistValues>
                <fullName>PPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-Targeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maps-Reputation Dashboard</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CR_Client_Sensitivities__c</fullName>
        <label>CR Client Sensitivities</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CR_Client_Spend_Type__c</fullName>
        <label>CR Client Spend Type</label>
        <picklist>
            <picklistValues>
                <fullName>Do Not Know</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CR_Conf_Numb_Login__c</fullName>
        <label>CR Conf Number &amp; Login</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CR_Date_Time__c</fullName>
        <label>CR Date &amp; Time (Old)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CR_Rep_Location__c</fullName>
        <label>CR Rep Location</label>
        <picklist>
            <picklistValues>
                <fullName>On Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Location</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Call Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Status_Desc__c</fullName>
        <label>Call Status Desc</label>
        <picklist>
            <picklistValues>
                <fullName>ANSWERING MACHINE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANSWERING SERVICE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUSY SIGNAL (3 ATTEMPTS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CALL NOT COMPLETED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMPLETE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONTACT NAME ONLY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELECTRONIC EQUIPMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMPLOYEE SIZE ONLY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOREIGN LANGUAGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO ANSWER (3 ATTEMPTS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REFERRAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REFUSAL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign_Association__c</fullName>
        <label>Campaign Association</label>
        <picklist>
            <picklistValues>
                <fullName>Direct_Mail_01/11/10</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Campaign_Code__c</fullName>
        <label>Campaign Code</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Campaign_Status__c</fullName>
        <label>Campaign Status</label>
        <picklist>
            <picklistValues>
                <fullName>Scheduled Needs Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performed Needs Assessment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cancel_Workflow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancel Workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Beauty / Barber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eating and drinking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education &amp; religion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial services / Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Improvement Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Niche Medical Professions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Close_Date_Default__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Meant to help set the default close date on a converted lead to a different/determined value.</description>
        <label>Close Date Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cohort__c</fullName>
        <label>Cohort</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comp_1__c</fullName>
        <label>Comp 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_2__c</fullName>
        <label>Comp 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_3__c</fullName>
        <label>Comp 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Competitive_Advantage__c</fullName>
        <label>Company Competitive Advantage</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Type__c</fullName>
        <label>Company Type</label>
        <picklist>
            <picklistValues>
                <fullName>Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beauty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charter School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Golf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Higher Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Perochial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restaurant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialty Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Connected_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Connected Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Us_Form_Result__c</fullName>
        <description>How the client responded to &quot;How Can We Help You?&quot; from the Contact Us form</description>
        <label>Contact Us Form Result</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Converted_Count__c</fullName>
        <formula>IF(ConvertedDate &gt;  DATE(2011,5,12),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Converted Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Create_DateTime__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Credit_Score_Code__c</fullName>
        <label>Credit Score Code</label>
        <picklist>
            <picklistValues>
                <fullName>A+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>